--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
 .streamlit/secrets.toml
 .env
+
+# Database
+*.db
+*.sqlite3
+*.sqlite
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environment variables
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# IDE settings
+.vscode/
+.idea/
+
+# OS specific
+.DS_Store
+Thumbs.db
